Revert "FieldLayout: Avoid unclickable gap between widget and label in 'inline' align"
This reverts commit 6745e4e54b7fc84d2ff626b5ffc7073ef58487a7.

Bug: T201871

--- a/src/themes/apex/layouts.less
+++ b/src/themes/apex/layouts.less
@@ -66,17 +66,6 @@
 
 		&.oo-ui-labelElement > .oo-ui-fieldLayout-body > .oo-ui-fieldLayout-header {
 			padding-left: 0.5em;
-			text-indent: -1em;
-
-			> * {
-				// This property is inherited, we don't want it to apply to the help button
-				text-indent: 0;
-			}
-
-			// Avoid an unclickable gap between the widget and the label (T178456)
-			> .oo-ui-labelElement-label {
-				padding-left: 1em;
-			}
 		}
 	}
 
